<resources>
    <string name="app_name">ImPulse</string>
    <string name="workout_list">Workout list</string>
    <string name="exercise_list">Exercise list</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="desired_weight">Desired Weight</string>
    <string name="start">Start</string>
    <string name="impulse">ImPulse</string>
    <string name="start_fragment">StartFragment</string>
    <string name="main_fragment">MainFragment</string>
    <string name="calories_fragment">CaloriesFragment</string>
    <string name="favourite_fragment">FavouritesFragment</string>
    <string name="profile_fragment">ProfileFragment</string>
    <string name="workout_fragment">WorkoutFragment</string>
    <string name="profile">Profile</string>
    <string name="text_name">Text Name</string>
    <string name="workout">Workout</string>
    <string name="settings">Settings</string>
    <string name="calories">Calories</string>
    <string name="user_data">User Data</string>
    <string name="go_to_back">Go to back</string>
    <string name="launch_recipes">Launch Recipes</string>
    <string name="snack_recipes">Snack Recipes</string>
    <string name="dinner_recipes">Dinner Recipes</string>
    <string name="breakfast_recipes">Breakfast Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise">Exercise</string>
    <string name="favourites">Favourites</string>
    <string name="information">Information</string>
    <string name="about_us">About us</string>
    <string name="to_change_profile">To change profile</string>
    <string name="textview">TextView</string>
    <string name="support">Support</string>
    <string name="change_data_profile">Change data profile</string>
    <string name="title_welcome_support">Welcome to the "ImPulse" application support window.</string>
    <string name="support_info">Here you can find contacts to contact the developers of this application. If you want to leave your feedback about the work of our application so that developers can see it, then you can also use the following contacts: </string>
    <string name="first_email">Email: impulsefeedback@gmail.com</string>
    <string name="second_email">Email: impulsesupport@gmail.com</string>
    <string name="first_number">Number: +7 (992) 206–45–45</string>
    <string name="second_number">Number: +7 (800) 555–35–35</string>
    <string name="second_support_info">If you find any bug in our application, please let us know by mail:</string>
    <string name="kirill_efremov">Kirill Efremov</string>
    <string name="efremov_info">Student of group 11–203. Sports organizer of the Institute of Information Technologies and Intelligent Systems. Year engaged in corporate development in the Java programming language. Novice Android Developer.</string>
    <string name="mikhailov_info">Student of group 11–203. Cultural-mass organizer of the Universiade Village of the 18th at home. Year engaged in corporate development in the Java programming language. Novice Android Developer.</string>
    <string name="minnegaleev_info">Student of group 11–203. The headman of block No. 1 of the Universiade Village of the eighteenth house. Year in corporate development in the Java programming language. Novice Android Developer.</string>
    <string name="charntsev_info">Student of group 11–201. Cultural-mass organizer of the Institute of Information Technologies and Intelligent Systems. Year engaged in corporate development in the Java programming language. Novice Android Developer.</string>
    <string name="ilya_mikhailov">Ilya Mikhailov</string>
    <string name="ayaz_minnegaleev">Ayaz Minnegaleev</string>
    <string name="egor_charntsev">Egor Charntsev</string>
    <string name="daily_calorie_intake">Daily calorie intake:</string>
    <string name="daily_water_intake">Daily water intake:</string>
</resources>