<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/dark_primary_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/support"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/im_btn_back"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/im_btn_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tv_title_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome_support"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/support_info"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_welcome" />

    <TextView
        android:id="@+id/tv_first_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_email"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_info" />

    <TextView
        android:id="@+id/tv_first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_number"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_email" />

    <TextView
        android:id="@+id/tv_second_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_support_info"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_number" />

    <TextView
        android:id="@+id/tv_second_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_email"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_info" />

    <TextView
        android:id="@+id/tv_second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/second_number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_email" />

    <ImageView
        android:id="@+id/iv_corp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@id/tv_corp"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_number"
        app:srcCompat="@drawable/copyright_fill0_wght400_grad0_opsz48" />

    <TextView
        android:id="@+id/tv_corp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impulse"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_number" />

</androidx.constraintlayout.widget.ConstraintLayout>